--- a/blockly/package.json
+++ b/blockly/package.json
@@ -1,26 +1,37 @@
 {
-  "name": "blockly",
-  "version": "1.0.0",
-  "description": "",
-  "keywords": [],
-  "main": "src/index.js",
+  "name": "app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "node-blockly": "1.0.35",
-    "react": "16.8.3",
-    "react-blockly-drawer": "1.6.6",
-    "react-dom": "16.8.3"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "file-saver": "^2.0.2",
+    "jszip": "^3.5.0",
+    "react": "^16.13.1",
+    "react-blockly-drawer": "^1.6.6",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
